# redmine-to-slack

./: .dockerignore  .gitignore  Cargo.toml  LICENSE.txt  README.md
container/: entrypoint.sh
demo/: compose.yaml
deploy/docker/: Dockerfile  compose.yaml  replace-env.sh  sample.env
resources/: slack-notification.template
src/: app.rs  cli_args.rs  lib.rs  log.rs  main.rs  redmine.rs  slack.rs
