[package]
name = "redmine-to-slack"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["arkbig"]
description = "Subscribe Redmine and notify Slack."
readme = "README.md"
repository = "https://github.com/arkbig/redmine-to-slack"
license = "Zlib"
keywords = ["redmine", "slack"]
categories = ["command-line-utilities"]

[lib]
name = "redmine_to_slack_lib"

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.11", features = ["derive"] }
feed-rs = "1.3.0"
proc-exit = "2.0.1"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
signal-hook = "0.3.15"
thiserror = "1.0.41"
ureq = "2.7.1"
